--- a/views/events.hbs
+++ b/views/events.hbs
@@ -1,6 +1,7 @@
 {{> head}}
 <body>
   {{> menus}}
+  sdfsdf sfd
   <div class="ui internally celled grid">
     <div class="row">
       <div class="twelve wide centered column">
