--- a/views/events.hbs
+++ b/views/events.hbs
@@ -1,7 +1,7 @@
 {{> head}}
 <body>
   {{> menus}}
-  sdfsdf sfd
+  sdfsdf sfd sdf df
   <div class="ui internally celled grid">
     <div class="row">
       <div class="twelve wide centered column">
