--- a/views/announcements.hbs
+++ b/views/announcements.hbs
@@ -7,7 +7,7 @@
         <h1 class="ui header">Events</h1>
         <div class="ui secondary menu">
           <a class="item">
-            <button id="btnNewEvent" class="positive ui button">New Event</button>
+            <button class="positive ui button">New Announcement</button>
           </a>
           <div class="right menu">
             <a class="ui item">
@@ -29,34 +29,13 @@
             </a>
           </div>
         </div>
-
-        <div id="event_list">
-
-          <table class="ui single line table">
-
-            <thead>
-              <tr>
-                <th>Date</th>
-                <th>Activity Name</th>
-                <th>Location</th>
-              </tr>
-            </thead>
-            <tbody>
-              {{#event_list}}
-              <tr>
-                  <td>{{event_date}}</td>
-                  <td>{{event_name}}</td>
-                  <td>{{location}}</td>
-              </tr>
-              {{/event_list}}
-            </tbody>
-
-          </table>
+        <div id="announcement_list">
+            Text here
         </div>
       </div>
     </div>
   </div>
 
-  {{> event_modal}}
+  <script src="js/script.js"></script>
 </body>
 </html>
