--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -9,7 +9,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
+  <!--
   <link rel="stylesheet" type="text/css" href="semantic/components/reset.css">
   <link rel="stylesheet" type="text/css" href="semantic/components/site.css">
   <link rel="stylesheet" type="text/css" href="semantic/components/container.css">
@@ -18,23 +18,36 @@
   <link rel="stylesheet" type="text/css" href="semantict/components/image.css">
   <link rel="stylesheet" type="text/css" href="semantic/components/menu.css">
 
+
   <link rel="stylesheet" type="text/css" href="semantic/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="semantic/components/dropdown.css">
   <link rel="stylesheet" type="text/css" href="semantic/components/segment.css">
   <link rel="stylesheet" type="text/css" href="semantic/components/button.css">
   <link rel="stylesheet" type="text/css" href="semantic/components/list.css">
   <link rel="stylesheet" type="text/css" href="semantic/components/icon.css">
   <link rel="stylesheet" type="text/css" href="semantic/components/sidebar.css">
-  <link rel="stylesheet" type="text/css" href="semantic/components/transition.css">
-  <link rel="stylesheet" type="text/css" href="semantic/components/table.css">
-  <link rel="stylesheet" type="text/css" href="semantic/components/dropdown.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
 
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="semantic/components/visibility.js"></script>
+  <link rel="stylesheet" type="text/css" href="semantic/components/table.css">
+  <link rel="stylesheet" type="text/css" href="semantic/components/dimmer.css">
+
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="semantic/components/sidebar.js"></script>
-  <script src="semantic/components/transition.js"></script>
+  <script src="semantic/components/visibility.js"></script>
+
+-->
+
+  <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="semantic/components/dropdown.css">
+  <link rel="stylesheet" type="text/css" href="semantic/components/transition.css">
+  <link rel="stylesheet" type="text/css" href="semantic/components/modal.css">
+  <link rel="stylesheet" type="text/css" href="semantic/components/table.css">
+
+  <script src="js/jquery-3.1.1.min.js"></script>
+  <script src="semantic/components/semantic.min.js"></script>
   <script src="semantic/components/dropdown.js"></script>
+  <script src="semantic/components/transition.js"></script>
+  <script src="semantic/components/modal.js"></script>
+  <script src="semantic/components/dimmer.js"></script>
+  <script src="js/script.js"></script>
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
