setup NPM start

--- a/views/partials/event_modal.hbs
+++ b/views/partials/event_modal.hbs
@@ -22,7 +22,7 @@
     </form>
   </div>
   <div class="actions">
-    <button class="ui button" type="button">Cancel</button>
+    <button id="btnCancel" class="ui button" type="button">Cancel</button>
     <button id="btnCreateEvent" class="ui positive button" type="button">Create Event</button>
   </div>
 </div>
