--- a/views/announcements.hbs
+++ b/views/announcements.hbs
@@ -4,7 +4,7 @@
   <div class="ui internally celled grid">
     <div class="row">
       <div class="twelve wide centered column">
-        <h1 class="ui header">Events</h1>
+        <h1 class="ui header">Announcements</h1>
         <div class="ui secondary menu">
           <a class="item">
             <button class="positive ui button">New Announcement</button>
