--- a/views/events.hbs
+++ b/views/events.hbs
@@ -31,7 +31,7 @@
         </div>
 
         <div id="event_list">
-
+          <p>{{current_date}}</p>
           <table class="ui single line table">
 
             <thead>
