Filter events by current month

--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -39,6 +39,8 @@
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic/components/transition.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/modal.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/components/table.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/calendar.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/daterangepicker.css">
 
   <script src="js/jquery-3.1.1.min.js"></script>
   <script src="semantic/dist/components/semantic.min.js"></script>
@@ -46,6 +48,9 @@
   <script src="semantic/dist/components/transition.js"></script>
   <script src="semantic/dist/components/modal.js"></script>
   <script src="semantic/dist/components/dimmer.js"></script>
+  <script src="semantic/dist/components/moment.js"></script>
+  <script src="semantic/dist/components/calendar.js"></script>
+  <script src="semantic/dist/components/daterangepicker.js"></script>
   <script src="js/script.js"></script>
 
   <!--[if lt IE 9]>
