--- a/views/partials/menus.hbs
+++ b/views/partials/menus.hbs
@@ -1,8 +1,8 @@
 <div class="ui attached stackable menu">
   <div class="ui container">
     <a href="/" class="item"><i class="home icon"></i> Home</a>
-    <a href="/show_events" class="item"><i class="calendar icon"></i> Events</a>
-    <a href="/show_announcements" class="item"><i class="mail icon"></i> Announcements</a>
+    <a href="/events" class="item"><i class="calendar icon"></i> Events</a>
+    <a href="/announcements" class="item"><i class="mail icon"></i> Announcements</a>
     <a class="right item">
       <a class="item"><i class="user icon"></i> Logout</a>
     </a>
