--- a/views/events.hbs
+++ b/views/events.hbs
@@ -31,7 +31,7 @@
         </div>
 
         <div id="event_list">
-          <p>{{current_date}}</p>
+          <p>Current Date: {{dateFormat current_date "MMMM D, YYYY"}}</p>
           <table class="ui single line table">
 
             <thead>
@@ -44,7 +44,7 @@
             <tbody>
               {{#event_list}}
               <tr>
-                  <td>{{event_date}}</td>
+                  <td>{{dateFormat event_date "dddd, MMMM Do YYYY, h:mm a"}}</td>
                   <td>{{event_name}}</td>
                   <td>{{location}}</td>
               </tr>
