--- a/views/partials/event_modal.hbs
+++ b/views/partials/event_modal.hbs
@@ -4,11 +4,16 @@
   </div>
   <div class="image content">
     <div class="image"></div>
-    <form id="frmEventAdd" class="ui form" method="POST" action="/events" >
+    <form id="frmEventAdd" class="ui form" method="POST" action="/api/events" >
       <div class="description">
+
             <div class="field">
-              <label>Activity Date</label>
-              <input name="event_date" placeholder="Date..." type="text" size="50">
+              <div class="ui calendar">
+                <div class="ui input left icon">
+                  <i class="calendar icon"></i>
+                  <input id="event_date" name="event_date" type="text" placeholder="Date...">
+                </div>
+              </div>
             </div>
             <div class="field">
               <label>Activity Name</label>
