--- a/views/events.hbs
+++ b/views/events.hbs
@@ -30,29 +30,8 @@
           </div>
         </div>
 
-        <div id="event_list">
-          <p>Current Date: {{dateFormat current_date "MMMM D, YYYY"}}</p>
-          <table class="ui single line table">
+        {{> event_listing}}
 
-            <thead>
-              <tr>
-                <th>Date</th>
-                <th>Activity Name</th>
-                <th>Location</th>
-              </tr>
-            </thead>
-            <tbody>
-              {{#event_list}}
-              <tr>
-                  <td>{{dateFormat event_date "dddd, MMMM Do YYYY, h:mm a"}}</td>
-                  <td>{{event_name}}</td>
-                  <td>{{location}}</td>
-              </tr>
-              {{/event_list}}
-            </tbody>
-
-          </table>
-        </div>
       </div>
     </div>
   </div>
