--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,9 +7,8 @@
     <div class="twelve wide centered column">
       <h1 class="ui header">Home</h1>
 
-      <div>
-          Text here
-      </div>
+      {{> event_listing}}
+
     <div>
   </div>
 </div>
