Practice array and object

--- a/views/events.hbs
+++ b/views/events.hbs
@@ -9,6 +9,10 @@
           <a class="item">
             <button id="btnNewEvent" class="positive ui button">New Event</button>
           </a>
+          <a class="item">
+            <button id="btnDeleteEvent" class="negative ui button">Delete</button>
+          </a>
+          
           <div class="right menu">
             <a class="ui item">
               <select id="cboMonth" class="ui search dropdown">
